igonre light commit broke something #45227

Closed
opened 2015-06-28 20:03:30 +02:00 by Ronny G · 6 comments

System Information
ubuntu 14.04 4930k 630gt

Blender Version
Broken: 9260c0c2ba

Short description of error

seems glossy is broken after the ignore light commit

Exact steps for others to reproduce the error

render with 9260c0c2ba and with one commit before

blend ( 1 sun lamp and 1 env map)

lighterror.blend

image

lighterror.jpg

**System Information** ubuntu 14.04 4930k 630gt **Blender Version** Broken: 9260c0c2baf6ec8c03e10a895301fba0f9adfcb3 **Short description of error** seems glossy is broken after the ignore light commit **Exact steps for others to reproduce the error** render with 9260c0c2baf6ec8c03e10a895301fba0f9adfcb3 and with one commit before blend ( 1 sun lamp and 1 env map) [lighterror.blend](https://archive.blender.org/developer/F198147/lighterror.blend) image ![lighterror.jpg](https://archive.blender.org/developer/F198144/lighterror.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ
Sergey Sharybin was assigned by Bastien Montagne 2015-06-28 20:08:38 +02:00
Author

heres a simpler file

lighterror1.blend

with environment MIS on it looks different with MIS off it looks ok

heres a simpler file [lighterror1.blend](https://archive.blender.org/developer/F198149/lighterror1.blend) with environment MIS on it looks different with MIS off it looks ok

This issue was referenced by e245a57640

This issue was referenced by e245a5764048d371285120e6b0347f762a61feb0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@28a3c610e7

This issue was referenced by blender/cycles@28a3c610e7376a66f07536761a4369884a3581be
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45227
No description provided.