Fix T45227: Light optimization commit broke world MIS